== 2.1.4 ==
Release date: September 14, 2020
* Added: Info Box, Info Box Carousel - Option to show button in case of link type box option
* Enhancement: Info Box Carousel - Updated Choose Arrow control
* Fixed: Logo Grid - Greyscale option was not working in editor

== 2.1.3 ==
Release date: August 31, 2020
* Fixed: Buttons - Tooltip styling options were not working in buttons widget
* Fixed: Info Box Carousel - Icon type image was not showing on frontend
* Fixed: PHP error in template library

== 2.1.2 ==
Release date: August 25, 2020
* Enhancement: Compatibility to Elementor 3.0

== 2.1.1 ==
Release date: August 25, 2020
* Fixed: Posts - Ajax error after updating to WP 5.5

== 2.1.0 ==
Release date: August 11, 2020
* New: Posts widget
* Fixed: Image Accordion - Stack On option was not working

== 2.0.0 ==
Release date: July 29, 2020
* New: Template Library
* Added: Team Member Carousel -  border, radius and padding options for team member box
* Added: Flipbox - Icon text option
* Added: Flipbox - Title HTML tag option

== 1.3.0 ==
Release date: July 20, 2020
* Enhancement: Updated admin panel UI
* Added: Advanced Accordion - Toggle icon alignment and few other styling options
* Fixed: Hotspots - Hotspot text was not visible on hover
* Added: Gravity Forms - Thank You Message Styling Options

== 1.2.9.5 ==
Release date: June 11, 2020
* Added: Image Hotspots - Border, border radius and box shadow options for image
* Fixed: Team Member Carousel - Email and phone icons were not working
* Added: Info Box - Minimum height option
* Added: Image Comparison - Added dynamic controls to image and labels

== 1.2.9.4 ==
Release date: May 7, 2020
* Added: Advanced Accordion - Title HTML tag option
* Fixed: Instagram Feed - Square images option was not working
* Fixed: Image Hotspots, Flipbox - Dynamic tags were not working
* Added: Icon List - Background color and hover colors for text

== 1.2.9.3 ==
Release date: April 20, 2020
* Added: Button width option